# iplocbuild

./: README.md  pyproject.toml
src/iplocbuild/: cli.py
tests/: test_iplocbuild.py
