[tool.poetry]
name = "iplocbuild"
version = "1.0.2"
description = "Command line too to generate IP Location files from routes found on network devices."
authors = ["Rob Woodward <rob@emailplus.org>"]
license = "BSD-2-Clause"
readme = "README.md"
repository = "https://github.com/robwdwd/iplocbuild"
include = ["README.md", "LICENSE"]


[tool.poetry.dependencies]
python = "^3.6, >=3.6.2"
netaddr = "^0.8.0"
lxml = "^4.6.3"
junos-eznc = "^2.6.2"
click = "^8.0.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^3.9.2"
pylint = "^2.9.5"
pydocstyle = "^6.1.1"
black = "^21.7b0"

[tool.poetry.scripts]
iplocbuild = "iplocbuild.cli:cli"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
