[tool.poetry]
name = "iplocbuild"
version = "1.1.0"
description = "Command line too to generate IP Location files from routes found on network devices."
authors = ["Rob Woodward <rob@emailplus.org>"]
license = "BSD-2-Clause"
readme = "README.md"
repository = "https://github.com/robwdwd/iplocbuild"
include = ["README.md", "LICENSE"]


[tool.poetry.dependencies]
python = "^3.9"
netaddr = "^0.8.0"
junos-eznc = "^2.6.3"
lxml = "^4.6.5"
click = "^8.1.0"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
pytest = "^7.2.1"
pydocstyle = "^6.1.1"
pylint = "^2.15.0"
black = "^22.8.0"


[tool.poetry.scripts]
iplocbuild = "iplocbuild.cli:cli"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
